--- a/1.0/Dockerfile
+++ b/1.0/Dockerfile
@@ -23,9 +23,10 @@ ENV COREDNS_VERSION 010
 
 ADD https://github.com/coredns/coredns/releases/download/v${COREDNS_VERSION}/coredns_${COREDNS_VERSION}_linux_armv6l.tgz /coredns.tgz
 
-RUN tar -xf /coredns.tgz && \
-    rm /coredns.tgz && \
-    mv coredns /usr/bin/coredns && \
+# RUN tar -xf /coredns.tgz && \
+#    /coredns.tgz && \
+#    mv /coredns /usr/bin/coredns && \
+RUN mv /coredns.tgz/coredns /usr/bin/coredns && \
     mkdir /etc/coredns && \
     mkdir -p /var/log/coredns
 
