--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,9 @@ testing:
 stable:
   stage: deploy
   script:
-    - docker build -t "$CI_REGISTRY_IMAGE:v0.11.0" 1.0
-    - docker push "$CI_REGISTRY_IMAGE:v0.11.0"
+    - export VERSION=$(grep ' VERSION' 1.0/Dockerfile|awk -F" " '{ print $3 }')
+    - echo ${VERSION}
+    - docker build -t "$CI_REGISTRY_IMAGE:v${VERSION}" 1.0
+    - docker push "$CI_REGISTRY_IMAGE:v${VERSION}"
   only:
     - tags
