--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,37 +1,94 @@
-image: docker:git
+# Copyright (C) 2016-2018 Nicolas Lamirault <nicolas.lamirault@gmail.com>
+
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+image: docker:stable
+
 services:
   - docker:dind
 
 variables:
-  DOCKER_DRIVER: overlay
+  DOCKER_DRIVER: overlay2
 
 before_script:
-  - docker login -u gitlab-ci-token -p "$CI_BUILD_TOKEN" "$CI_REGISTRY"
+  - docker info
 
-development:
-  stage: deploy
-  script:
-    - docker build -t "$CI_REGISTRY_IMAGE:latest" 1.0
-    - docker push "$CI_REGISTRY_IMAGE:latest"
-  only:
-    - master
+.docker_gitlab: &docker_gitlab
+  before_script:
+    - docker login -u gitlab-ci-token -p "$CI_BUILD_TOKEN" "$CI_REGISTRY"
 
-testing:
-  stage: deploy
-  script:
-    - docker build -t "$CI_REGISTRY_IMAGE:${CI_COMMIT_REF_SLUG}" 1.0
-    - docker push "$CI_REGISTRY_IMAGE:${CI_COMMIT_REF_SLUG}"
-  only:
-    - branches
-  except:
-    - master
+.docker_hub: &docker_hub
+  before_script:
+    - docker login -u $DOCKER_USER -p $DOCKER_PASS
 
-stable:
-  stage: deploy
+build:gitlab:
+  <<: *docker_gitlab
+  stage: build
   script:
-    - export VERSION=$(grep ' VERSION' 1.0/Dockerfile|awk -F" " '{ print $3 }')
+    - export VERSION=$(grep ' VERSION' 1.1/Dockerfile.arm|awk -F" " '{ print $3 }')
     - echo ${VERSION}
-    - docker build -t "$CI_REGISTRY_IMAGE:v${VERSION}" 1.0
-    - docker push "$CI_REGISTRY_IMAGE:v${VERSION}"
+    - docker build -t "$CI_REGISTRY_IMAGE:${VERSION}.arm.latest" 1.1 -f 1.1/Dockerfile.arm
+    - docker push "$CI_REGISTRY_IMAGE:${VERSION}.arm.latest"
+    - export VERSION=$(grep ' VERSION' 1.1/Dockerfile.arm64|awk -F" " '{ print $3 }')
+    - echo ${VERSION}
+    - docker build -t "$CI_REGISTRY_IMAGE:${VERSION}.arm64.latest" 1.1 -f 1.1/Dockerfile.arm64
+    - docker push "$CI_REGISTRY_IMAGE:${VERSION}.arm64.latest"
+
+  only:
+    - master
+
+build:hub:
+  <<: *docker_hub
+  stage: build
+  script:
+    - export VERSION=$(grep ' VERSION' 1.1/Dockerfile.arm|awk -F" " '{ print $3 }')
+    - echo ${VERSION}
+    - docker build -t "zeiot/$CI_PROJECT_NAME:${VERSION}.arm.latest" 1.1 -f 1.1/Dockerfile.arm
+    - docker push "zeiot/$CI_PROJECT_NAME:${VERSION}.arm.latest"
+    - export VERSION=$(grep ' VERSION' 1.1/Dockerfile.arm64|awk -F" " '{ print $3 }')
+    - echo ${VERSION}
+    - docker build -t "zeiot/$CI_PROJECT_NAME:${VERSION}.arm64.latest" 1.1 -f 1.1/Dockerfile.arm64
+    - docker push "zeiot/$CI_PROJECT_NAME:${VERSION}.arm64.latest"
+  only:
+    - master
+
+deploy:gitlab:
+  <<: *docker_gitlab
+  stage: deploy
+  script:
+    - export VERSION=$(grep ' VERSION' 1.1/Dockerfile.arm|awk -F" " '{ print $3 }')
+    - echo ${VERSION}
+    - docker build -t "$CI_REGISTRY_IMAGE:v${VERSION}.arm" 1.1 -f 1.1/Dockerfile.arm
+    - docker push "$CI_REGISTRY_IMAGE:v${VERSION}.arm"
+    - export VERSION=$(grep ' VERSION' 1.1/Dockerfile.arm64|awk -F" " '{ print $3 }')
+    - echo ${VERSION}
+    - docker build -t "$CI_REGISTRY_IMAGE:v${VERSION}.arm64" 1.1 -f 1.1/Dockerfile.arm64
+    - docker push "$CI_REGISTRY_IMAGE:v${VERSION}.arm64"
   only:
     - tags
+
+deploy:hub:
+  <<: *docker_hub
+  stage: deploy
+  script:
+    - export VERSION=$(grep ' VERSION' 1.1/Dockerfile.arm|awk -F" " '{ print $3 }')
+    - echo ${VERSION}
+    - docker build -t "zeiot/$CI_PROJECT_NAME:v${VERSION}.arm" 1.1 -f 1.1/Dockerfile.arm
+    - docker push "zeiot/$CI_PROJECT_NAME:v${VERSION}.arm"
+    - export VERSION=$(grep ' VERSION' 1.1/Dockerfile.arm64|awk -F" " '{ print $3 }')
+    - echo ${VERSION}
+    - docker build -t "zeiot/$CI_PROJECT_NAME:v${VERSION}.arm64" 1.1 -f 1.1/Dockerfile.arm64
+    - docker push "zeiot/$CI_PROJECT_NAME:v${VERSION}.arm64"
+  only:
+    - tags
+
